# hypersync-client-python

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MIGRATION_GUIDE.md  README.md  example.py  hypersync.pyi  pyo3_dev_notes.md  pyproject.toml  test.py
.env/: pyvenv.cfg
.github/workflows/: CI.yml  publish.yml
data/: block.parquet  log.parquet  transaction.parquet
examples/: all-erc20-transfer-and-approve.py  all-erc20-transfers.py  all-erc20.py  all_erc20.py  all_erc20_transfer_and_approve.py  all_erc20_transfers.py  block-data.py  block_data.py  block_rewards.py  call_watch.py  chain-id.py  chain_id.py  eip7702.py  parquet-blocks-and-transactions.py  parquet_blocks_and_transactions.py  simple-blocks-and-transaction-hashes.py  simple-blocks-and-transactions.py  simple-logs-of-event.py  simple-logs.py  simple_blocks_and_transaction_hashes.py  simple_blocks_and_transactions.py  simple_logs.py  simple_logs_of_event.py  stream-with-progress-bar.py  stream_with_progress_bar.py  top-usdt.py  top_usdt.py  trace_call_watch.py  tx-by-hash.py  tx_by_hash.py  uniswap-pool-swap-events.py  uniswap_pool_swap_events.py  wallet.py  watch.py
hypersync/: __init__.py
src/: arrow_ffi.rs  config.rs  decode.rs  decode_call.rs  from_arrow.rs  lib.rs  query.rs  response.rs  types.rs
