[package]
name = "hypersync"
version = "0.8.5"
edition = "2021"

[lib]
name = "hypersync"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = [
  "extension-module",
  "anyhow",
  "num-bigint",
] }
pyo3-async-runtimes = { version = "0.22", features = ["tokio-runtime"] }
tokio = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
alloy-json-abi = "0.8"
alloy-dyn-abi = "0.8"
alloy-primitives = "0.8"
hypersync-client = "0.17"
anyhow = "1"
polars-arrow = { version = "0.42" }
prefix-hex = "0.7"
env_logger = "0.11"
faster-hex = "0.9"
ruint = "1"
num-bigint = "0.4"
mimalloc = "0.1.43"
