[package]
name = "hypersync"
version = "0.11.0"
edition = "2021"

[lib]
name = "hypersync"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = [
  "extension-module",
  "anyhow",
  "num-bigint",
] }
pyo3-async-runtimes = { version = "0.26", features = ["tokio-runtime"] }
tokio = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
alloy-json-abi = "1.1"
alloy-dyn-abi = "1.1"
alloy-primitives = "1.1"
hypersync-client = "1.1.0"
anyhow = "1"
arrow = { version = "57", features = ["ffi"] }
prefix-hex = "0.7"
env_logger = "0.11"
faster-hex = "0.9"
ruint = "1"
num-bigint = "0.4"
mimalloc = "0.1.43"
