[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "hypersync"
requires-python = ">=3.9"
dependencies = ["strenum>=0.4.15"]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Development Status :: 3 - Alpha",
  "Topic :: Database :: Front-Ends",
  "Topic :: Software Development :: Libraries",
]
dynamic = ["version"]

[project.optional-dependencies]
examples = [
  "python-dotenv>=1.0.0",
  "polars==1.36.1",
  "tqdm-loggable==0.2",
  "pyarrow==22.0.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]

# See https://www.maturin.rs/metadata.html for options
[project.urls]
homepage = "https://envio.dev/"
documentation = "https://docs.envio.dev/docs/HyperSync/overview"
repository = "https://github.com/enviodev/hypersync-client-python"
